--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-sortable": "^0.17.0",
     "angular2react": "^3.0.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "bootstrap": "3.3.7",
     "cachefactory": "^3.0.0",
